--- a/resful-web-services/src/main/resources/messages.properties
+++ b/resful-web-services/src/main/resources/messages.properties
@@ -1,4 +1,1 @@
-server.port = 8070
-server.servlet.context-path=/restful-web-services
-
-logging.level.org.springframework=debug
+greeting.message=Hello Learner
